# apdu-dispatch

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: cd-test.yml  cd.yml  ci.yml
app/: CHANGELOG.md  Cargo.toml
app/src/: lib.rs
dispatch/: CHANGELOG.md  Cargo.toml
dispatch/src/: dispatch.rs  lib.rs
dispatch/tests/: dispatch.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_target_1.rs
src/: app.rs  dispatch.rs  interchanges.rs  lib.rs
tests/: dispatch.rs
