[package]
name = "apdu-dispatch"
version = "0.1.0"
authors = ["Conor Patrick <conor@solokeys.com>", "Nicolas Stalder <n@stalder.io>"]
edition = "2021"
license = "Apache-2.0 OR MIT"
description = "Dispatch layer after nfc-device and usbd-ccid"
repository = "https://github.com/solokeys/apdu-dispatch"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
delog = "0.1.4"
heapless = "0.7"
interchange = "0.2.0"
iso7816 = { git = "https://github.com/Nitrokey/iso7816.git", branch = "fix-le-parsing" }

[dev-dependencies]
# Testing
serial_test = "0.6"
hex-literal = "0.3.4"

[features]
default = []
std = ["delog/std"]

log-all = []
log-none = []
log-debug = []
log-info = []
log-trace = []
log-warn = []
log-error = []
