[workspace]
members = ["app", "dispatch"]
resolver = "2"

[workspace.package]
authors = ["Conor Patrick <conor@solokeys.com>", "Nicolas Stalder <n@stalder.io>", "The Trussed developers"]
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/trussed-dev/apdu-dispatch"

[workspace.dependencies]
iso7816 = "0.1.1"

[patch.crates-io]
apdu-app.path = "app"
