[package]
name = "apdu-dispatch"
version = "0.2.0"
description = "Dispatch layer after nfc-device and usbd-ccid"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
apdu-app = "0.1.0"
delog = "0.1.4"
heapless = "0.7"
interchange = "0.3.0"
iso7816.workspace = true

[dev-dependencies]
# Testing
serial_test = "0.6"
hex-literal = "0.3.4"

[features]
default = []
std = ["delog/std"]

log-all = []
log-none = []
log-debug = []
log-info = []
log-trace = []
log-warn = []
log-error = []
